# Lab1

./: .env  .gitignore  README.md  dvc.yaml  h -u origin HEAD  mlflow.db  models.dvc  pyproject.toml
.dvc/: config  config.backup
Notebooks/: requirements.txt  titanic.ipynb
Src/: feature_engineering.py  main.py  model.py  predict.py  preprocessing.py  train.py
conf/: cfg.yaml  config.yaml
conf/feature_extractor/: basic.yaml
conf/model/: lgb.yaml  rf.yaml
outputs/2026-04-24/14-43-01/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-24/14-43-50/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-24/14-47-31/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-04-30/12-29-51/.hydra/: hydra.yaml
outputs/2026-04-30/15-46-14/.hydra/: hydra.yaml
outputs/2026-04-30/15-55-18/.hydra/: hydra.yaml
outputs/2026-05-05/15-42-18/.hydra/: hydra.yaml
outputs/2026-05-05/15-45-59/.hydra/: config.yaml  hydra.yaml
