[project]
name = "Titanic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dagshub>=0.7.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "mlflow>=3.11.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
